app/frontend/assets/styles/components/_incident-details.scss
.page__detail {
    padding: 2rem 0 5em;
    h1 {
        margin-bottom: 0;
        + span {
            font-size: 0.875em;
        }
    }

    .aside {
        font-size: 0.875em;

        .btn {
            text-align: left;
            width: auto;
            display: inline-block;
            font-size: 0.875em;
            margin-right: 4px;

            &-textlink {
                text-decoration: $link-decoration;
            }
        }

        .list__mutations {
            margin-top: 0;
        }

        .alert {
            font-size: inherit;
        }
    }
}

.container__actions {
    background-color: $blue-100;
    width: 100%;
    padding: 0 1em 1em;
    z-index: 1000;
    border: 1px solid transparent;
    box-sizing: border-box;
    p {
        margin-bottom: 0.5rem;
    }
    p:not(:first-of-type) {
        margin-top: 0.5rem;
    }

    .alert {
        display: flex;
    }

    .btn-checkbox {
        svg {
            vertical-align: middle;
            margin-right: 0;
            transform: translateY(-3px);
        }
    }

    &.stayFixed {
        @media (min-width: map-get($grid-breakpoints, md)) {
            position: fixed;
            top: 0;
            // right: 20px;
            background-color: $white;
            border: 1px solid $gray-tint04;
            transition-property: background-color, border-color;
            transition-duration: $transition-duration-default;
            transition-timing-function: $transition-ease-default;
        }
    }
}

.container__details {
    > *:first-child {
        margin-top: 0;
    }
    h1 {
        margin-top: 0;
    }
    h2 {
        margin-bottom: 0;
        display: flex;
        align-items: center;
        padding-bottom: 1rem;
        border-bottom: 1px solid $gray-tint04;

        svg {
            margin-right: 8px;
        }
    }
    h3 {
        margin-bottom: 0.25rem;

        &:first-child {
            margin-top: 0;
        }
    }
    p {
        margin-top: 0;
        line-height: 175%;
    }

    > *:last-child {
        margin-bottom: 0;
    }

    ul {
        flex: 1;
    }

    .divider {
        border-top: 1px solid #ccc;
        margin: 20px 0;
    }

    .locatie-container {
        flex: 1 1 auto;

        .list-clean:not(.has-padding) {
            margin-top: 0;
        }

        input[type="checkbox"] {
            @include form-check-input();
            margin-bottom: 1em;
        }
    }

    summary {
        padding: 0 16px 0 40px;
        border-top: 0;
    }
}

.container__meldingnavigatie {
    position: absolute;
    top: 16px;
    right: 0;
    display: flex;
    justify-content: flex-end;
    gap: 8px;
    min-width: 182px;

    span,
    a {
        flex: 1;
        display: inline-block;
    }

    span {
        white-space: nowrap;
        line-height: 60px;
        align-self: flex-start;
    }

    .melding-navigatie {
        display: inline-block;
        width: 48px;
        height: 48px;
        border: 1px solid $gray-tint08;
        background-color: transparent;
        position: relative;

        svg {
            position: absolute;
            top: calc(50% - 12px);
            left: 12px;
            width: 24px;
            height: 24px;
            path {
                fill: $gray-tint11;
            }
        }
    }

    #melding_next_vorige .melding-navigatie {
        svg {
            transform: rotate(180deg);
        }
    }
    span.melding-navigatie {
        background-color: $gray-tint04;
        border-color: $gray-tint04;
    }
}

.no-image {
    background-color: $gray-tint02;
    height: 40px;
    background-repeat: no-repeat;
    background-position: center;
    margin: 0 $container-padding-x;
}

.incident-meta-list {
    li {
        margin-bottom: 1rem;
        > *:last-child {
            margin-bottom: 0;
        }
    }
}

.section--seperated {
    .full-width {
        margin: 0 (-(map-get($container-margin, md)));
    }
}

.section--location {
    margin-bottom: 50px;
}

.incident__header {
    display: flex;
    justify-content: space-between;

    .icon {
        display: inline-block;
    }
}

.container__details--overview {
    box-sizing: content-box;
    // padding-top: 16px;
    .wrapper {
        background-color: $gray-tint02;
        padding: $input-padding-x;
        display: flex;
        font-size: 0.875em;

        dl {
            margin: 0;
            flex-basis: 40%;
        }
    }
    select {
        margin: 0 $container-padding-x 0 0;
    }
}

.container__uitklapper {
    position: relative;
    z-index: 2000;
    display: inline;
    vertical-align: middle;

    > span {
        margin-left: $input-padding-y;
        svg {
            path {
                fill: $green-tint01;
            }
        }
    }

    .legenda {
        position: absolute;
        top: 20px;
        left: -45px;
        background-color: $white;
        width: auto;
        white-space: nowrap;
        padding: $input-padding-x;
        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
        display: none;
        opacity: 0;
        transition-property: opacity, display;
        transition-duration: $transition-duration-default;
        transition-timing-function: $transition-ease-default;
        transition-behavior: allow-discrete;

        ul {
            margin: 0;
        }

        li:not(:last-child) {
            margin-bottom: $input-padding-y;
        }
    }

    .legenda-item {
        display: inline-block;
        width: 24px;
        height: 24px;
        background-color: #78b4ff;
        margin-right: $input-padding-y;
        vertical-align: bottom;

        &.openbaar {
            background-color: #00ad00;
        }
        &.ret {
            background-color: #ffff64;
        }
        &.kunst {
            background-color: #d700b0;
        }
        &.begraafplaats {
            background-color: #ffaeff;
        }
        &.aquisitie {
            background-color: #3c3cff;
        }
        &.vastgoed {
            background-color: #d36000;
        }
    }

    &:hover,
    &:focus-within {
        .legenda {
            display: block;
            opacity: 1;
            @starting-style {
                opacity: 0;
            }
        }
    }
}

